--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,20 @@
 /*  your css code here. If applicable */
+*{
+	padding:0px;
+	margin:0px;
+	box-sizing:border-box;
+	font-size:20px;
+}
+body{
+	background:black;
+}
+#band{
+	list-style:square;
+	background:white;
+	width:50%;
+	margin:auto;
+	padding-inline:30px;
+}
+li{
+	padding:20px;
+}
